--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -6,14 +6,14 @@
 </head>
 <body>
     <form method="POST">
-        <div class="flex-container">
+        <div class="header-container">
             <div class="heading"></div>
             <div class="user-info">
-                <h4 class="user-details">
+                <div class="user-details">
                     {{user_name}} <br>
                     {{user_id}} <br>
                     {{user_department}}
-                </h4>
+                </div>
                 <button class="logout-btn" type="button">Logout</button>
             </div>
         </div>
