--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -16,6 +16,29 @@
                 </div>
                 <button class="logout-btn" type="button">Logout</button>
             </div>
+
+            <h1>Welcome to Exam Invigilation Management System</h1>
+
+            <div class="menu-container">
+                <div class="menu-grid">
+                    <!-- Row 1 -->
+                    <div class="menu-section">
+                        <h2>Enrolment</h2>
+                        <ul>
+                            <li>Course Enrolment</li>
+                            <li class="submenu">
+                                <strong>Add / Drop</strong>
+                                <ul>
+                                    <li>Course Add / Drop</li>
+                                    <li>Add / Drop History</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </form>
 </body>
