--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -33,6 +33,10 @@ form {
     justify-content: flex-end; /* aligns children to the right */
     align-items: center;
     width: 60%;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .user-details {
