--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -19,7 +19,7 @@
         </div>
         
         <br>
-        <h1>Welcome to Exam Invigilation Management System</h1>
+        <h1 style="text-align: center;">Welcome to Exam Invigilation Management System</h1>
         <br>
 
         <div class="menu-container">
