--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -22,24 +22,51 @@
         <h1 style="text-align: center;">Welcome to Exam Invigilation Management System</h1>
         <br>
 
-        <div class="menu-container">
-            <div class="menu-grid">
-                <!-- Row 1 -->
-                <div class="menu-section">
-                    <h2>Enrolment</h2>
-                    <ul>
-                        <li>Course Enrolment</li>
-                        <li class="submenu">
-                            <strong>Add / Drop</strong>
-                            <ul>
-                                <li>Course Add / Drop</li>
-                                <li>Add / Drop History</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+         <div class="menu-container">
+        <div class="menu-grid">
+            <!-- Row 1 -->
+            <div class="menu-section">
+                <h2>Enrolment</h2>
+                <ul>
+                    <li>Course Enrolment</li>
+                    <li class="submenu">
+                        <strong>Add / Drop</strong>
+                        <ul>
+                            <li>Course Add / Drop</li>
+                            <li>Add / Drop History</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="menu-section">
+                <h2>Statement</h2>
+                <ul>
+                    <li>Student Statement</li>
+                    <li>Registration Summary / Class Timetable</li>
+                </ul>
+            </div>
+
+            <!-- Row 2 -->
+            <div class="menu-section">
+                <h2>Payment</h2>
+                <ul>
+                    <li>Payment</li>
+                    <li>Online Payment History / Receipt</li>
+                    <li>Invoice and Adjustment Note</li>
+                </ul>
+            </div>
+
+            <div class="menu-section">
+                <h2>Account</h2>
+                <ul>
+                    <li>Change Password</li>
+                    <li>Update Profile</li>
+                    <li>Update Bank Details</li>
+                </ul>
             </div>
         </div>
+    </div>
 
 </body>
 </html>
