--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -22,11 +22,11 @@
         <h1 style="text-align: center;">Welcome to Exam Invigilation Management System</h1>
         <br>
 
-         <div class="menu-container">
+        <div class="menu-container">
         <div class="menu-grid">
-            <!-- Row 1 -->
+            <!-- Row 1 First Fesatures to upload merge schedule files--> 
             <div class="menu-section">
-                <h2>Enrolment</h2>
+                <h2>Upload the merged lectures timetable file to automatically assign lecturers to act as exam invigilators.</h2>
                 <ul>
                     <li>Course Enrolment</li>
                     <li class="submenu">
