--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -26,9 +26,9 @@
         <div class="menu-grid">
             <!-- Row 1 First Fesatures to upload merge schedule files--> 
             <div class="menu-section">
-                <h2>Upload the merged lectures timetable file to automatically assign lecturers to act as exam invigilators.</h2>
+                <h2>Upload File</h2>
                 <ul>
-                    <li>Course Enrolment</li>
+                    <li>Upload the merged lectures timetable file to automatically assign lecturers to act as exam invigilators.</li>
                     <li class="submenu">
                         <strong>Add / Drop</strong>
                         <ul>
