--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -39,10 +39,11 @@
                 </ul>
             </div>
 
+            <!-- Row 1 Second Fesatures to input exam details--> 
             <div class="menu-section">
-                <h2>Statement</h2>
+                <h2>Input Exam Details</h2>
                 <ul>
-                    <li>Student Statement</li>
+                    <li>Input all the exam details</li>
                     <li>Registration Summary / Class Timetable</li>
                 </ul>
             </div>
