--- a/app/templates/home_page.html
+++ b/app/templates/home_page.html
@@ -28,14 +28,9 @@
             <div class="menu-section">
                 <h2>Upload File</h2>
                 <ul>
-                    <li>Upload the merged lectures timetable file to automatically assign lecturers to act as exam invigilators.</li>
-                    <li class="submenu">
-                        <strong>Add / Drop</strong>
-                        <ul>
-                            <li>Course Add / Drop</li>
-                            <li>Add / Drop History</li>
-                        </ul>
-                    </li>
+                    <li>Upload File</li>
+                    <li>View Previous File</li>
+                    <li>Download File in PDF</li>
                 </ul>
             </div>
 
@@ -43,27 +38,30 @@
             <div class="menu-section">
                 <h2>Input Exam Details</h2>
                 <ul>
-                    <li>Input all the exam details</li>
-                    <li>Registration Summary / Class Timetable</li>
+                    <li>Add New Exam</li>
+                    <li>Edit/Delete Existing Exam</li>
+                    <li>Download All in Excel</li>
                 </ul>
             </div>
 
-            <!-- Row 2 -->
+            <!-- Row 2 First auto generated scdehule-->
             <div class="menu-section">
-                <h2>Payment</h2>
+                <h2>Generate Exam Schedule</h2>
                 <ul>
-                    <li>Payment</li>
-                    <li>Online Payment History / Receipt</li>
-                    <li>Invoice and Adjustment Note</li>
+                    <li>Generate Schedule</li>
+                    <li>View Current Schedule</li>
+                    <li>Email out this Schedule</li>
+                    <li>Download Schedule</li>
                 </ul>
             </div>
 
+            <!-- Row 2 Second on managing lecturers-->
             <div class="menu-section">
-                <h2>Account</h2>
+                <h2>Settings</h2>
                 <ul>
-                    <li>Change Password</li>
-                    <li>Update Profile</li>
-                    <li>Update Bank Details</li>
+                    <li>View All Lecturers</li>
+                    <li>Disable a Lecturer</li>
+                    <li>View All Dean</li>
                 </ul>
             </div>
         </div>
