--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -8,7 +8,7 @@ body {
 }
 
 form {
-    width: 130vh;
+    width: 60%;
     padding: 50px;
     border: 2px solid #ccc;
     border-radius: 10px;
@@ -18,9 +18,9 @@ form {
 
 .header-container {
     display: flex;
-    justify-content: space-between; /* pushes heading left and user-info right */
-    width: 95%;
-    margin: 20px;
+    justify-content: space-between;
+    width: 90%;
+    margin: 50px;
 }
 
 .heading {
