--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -41,10 +41,10 @@ form {
 
 .user-details {
     font-weight: normal;
-    font-size: large;
+    font-size: small;
     text-align: left;
     margin-right: 10px;
-    margin-left: 15px;
+    margin-left: 10px;
 }
 
 .logout-btn {
