--- a/app/templates/register_page.html
+++ b/app/templates/register_page.html
@@ -29,14 +29,14 @@
                 <label class="text-position">Department</label>
                 <select name="department" value="{{ department_text }}">
                     <option value="" disabled selected>Select Department</option>
-                    <option value="CADP">(CADP) Centre of Australian Degree Program</option>
-                    <option value="CAE">(CAE) Centre of American Student</option>
-                    <option value="CEPS">(CEPS) Centre of Excellent for Pre-University Studies</option>
-                    <option value="LCMPU">(LCMPU) Language Centre</option>
-                    <option value="SOBIZ">(SOBIZ) chool of Business</option>
-                    <option value="SOC">(SOC) School of Computing</option>
-                    <option value="SOE">(SOE) School of Engineering</option>
-                    <option value="SOHOS">(SOHOS) School of Hospitality and Culinary Arts</option>
+                    <option value="CADP- Centre of Australian Degree Program">(CADP) Centre of Australian Degree Program</option>
+                    <option value="CAE - Centre of American Student">(CAE) Centre of American Student</option>
+                    <option value="CEPS - Centre of Excellent for Pre-University Studies">(CEPS) Centre of Excellent for Pre-University Studies</option>
+                    <option value="LCMPU - Language Centre">(LCMPU) Language Centre</option>
+                    <option value="SOBIZ - School of Business">(SOBIZ) School of Business</option>
+                    <option value="SOC - School of Computing">(SOC) School of Computing</option>
+                    <option value="SOE - School of Engineering">(SOE) School of Engineering</option>
+                    <option value="SOHOS - School of Hospitality and Culinary Arts">(SOHOS) School of Hospitality and Culinary Arts</option>
                 </select>
             </div>
     
