--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -14,7 +14,9 @@
                     {{user_id}} <br>
                     {{user_department}}
                 </div>
-                <button class="logout-btn" type="button">Logout</button>
+                <!-- <button class="logout-btn" type="button">Logout</button> -->
+                <a href="{{ url_for('logout') }}" class="logout-btn" type="button">Logout</a>
+                
             </div>
         </div>
         
