--- a/app/templates/frontPart/register_page.html
+++ b/app/templates/frontPart/register_page.html
@@ -28,14 +28,14 @@
                 <label class="text-position">Department</label>
                 <select name="department" value="{{ department_text }}">
                     <option value="" disabled selected>Select Department</option>
-                    <option value="CADP- Centre of Australian Degree Program">(CADP) Centre of Australian Degree Program</option>
-                    <option value="CAE - Centre of American Student">(CAE) Centre of American Student</option>
-                    <option value="CEPS - Centre of Excellent for Pre-University Studies">(CEPS) Centre of Excellent for Pre-University Studies</option>
-                    <option value="LCMPU - Language Centre">(LCMPU) Language Centre</option>
-                    <option value="SOBIZ - School of Business">(SOBIZ) School of Business</option>
-                    <option value="SOC - School of Computing">(SOC) School of Computing</option>
-                    <option value="SOE - School of Engineering">(SOE) School of Engineering</option>
-                    <option value="SOHOS - School of Hospitality and Culinary Arts">(SOHOS) School of Hospitality and Culinary Arts</option>
+                    <option value="CADP- CENTRE OF AUSTRALIAN DEGREE PROGRAM">(CADP) CENTRE OF AUSTRALIAN DEGREE PROGRAM</option>
+                    <option value="CAE - CENTRE OF AMERICAN STUDENT">(CAE) CENTRE OF AMERICAN STUDENT</option>
+                    <option value="CEPS - CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES">(CEPS) CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES</option>
+                    <option value="LCMPU - LANGUAGE CENTRE">(LCMPU) LANGUAGE CENTRE</option>
+                    <option value="SOBIZ - SCHOOL OF BUSINESS">(SOBIZ) SCHOOL OF BUSINESS</option>
+                    <option value="SOC - SCHOOL OF COMPUTING">(SOC) SCHOOL OF COMPUTING</option>
+                    <option value="SOE - SCHOOL OF ENGINEERING">(SOE) SCHOOL OF ENGINEERING</option>
+                    <option value="SOHOS - SCHOOL OF HOSPITALITY AND CULINARY ARTS">(SOHOS) SCHOOL OF HOSPITALITY AND CULINARY ARTS</option>
                 </select>
             </div>
     
