--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -21,8 +21,8 @@ form {
 .header-container {
     display: flex;
     justify-content: space-between;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 10%;
+    margin-right: 15%;
 }
 
 .heading {
