--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -29,7 +29,7 @@
             <!-- Row 1 First Fesatures to upload merge schedule files--> 
             <div class="menu-section">
                 <h2>Upload File</h2><br>
-                <a href="{{ url_for('upload') }}"><h2>Upload File</h2></a>
+                <a href="{{ url_for('upload_file') }}"><h2>Upload File</h2></a>
                 <ul>
                     <li>Upload File</li>
                     <li>View Previous File</li>
