--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Upload File</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home_part.css') }}">
 </head>
 <body>
@@ -28,7 +28,8 @@
         <div class="menu-grid">
             <!-- Row 1 First Fesatures to upload merge schedule files--> 
             <div class="menu-section">
-                <h2>Upload File</h2>
+                <h2>Upload File</h2><br>
+                <a href="{{ url_for('upload_file') }}"><h2>Upload File</h2></a>
                 <ul>
                     <li>Upload File</li>
                     <li>View Previous File</li>
@@ -39,6 +40,7 @@
             <!-- Row 1 Second Fesatures to input exam details--> 
             <div class="menu-section">
                 <h2>Input Exam Details</h2>
+                <a href="{{ url_for('exam_input') }}"><h2>Input Exam Details</h2></a>
                 <ul>
                     <li>Add New Exam</li>
                     <li>Edit/Delete Existing Exam</li>
@@ -49,6 +51,7 @@
             <!-- Row 2 First auto generated scdehule-->
             <div class="menu-section">
                 <h2>Generate Exam Schedule</h2>
+                <a href="{{ url_for('auto_generate') }}"><h2>Generate Exam Schedule</h2></a>
                 <ul>
                     <li>Generate Schedule</li>
                     <li>View Current Schedule</li>
@@ -60,6 +63,7 @@
             <!-- Row 2 Second on managing lecturers-->
             <div class="menu-section">
                 <h2>Settings</h2>
+                <a href="{{ url_for('assign_lecturer') }}"><h2>Settings</h2></a>
                 <ul>
                     <li>View All Lecturers</li>
                     <li>Disable a Lecturer</li>
