--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -15,7 +15,7 @@
                     {{user_department}}
                 </div>
                 <!-- <button class="logout-btn" type="button">Logout</button> -->
-                <a href="{{ url_for('logout') }}" class="logout-btn" type="button">Logout</a>
+                <a href="{{ url_for('logout')}}" style="text-decoration: none;" class="logout-btn" type="button">Logout</a>
                 
             </div>
         </div>
@@ -29,7 +29,7 @@
             <!-- Row 1 First Fesatures to upload merge schedule files--> 
             <div class="menu-section">
                 <h2>Upload File</h2><br>
-                <a href="{{ url_for('upload_file') }}"><h2>Upload File</h2></a>
+                <a href="{{ url_for('upload_file')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
                 <ul>
                     <li>Upload File</li>
                     <li>View Previous File</li>
@@ -40,7 +40,7 @@
             <!-- Row 1 Second Fesatures to input exam details--> 
             <div class="menu-section">
                 <h2>Input Exam Details</h2>
-                <a href="{{ url_for('exam_input') }}"><h2>Input Exam Details</h2></a>
+                <a href="{{ url_for('exam_input')}}" style="text-decoration: none;"><h2>Input Exam Details</h2></a>
                 <ul>
                     <li>Add New Exam</li>
                     <li>Edit/Delete Existing Exam</li>
@@ -51,7 +51,7 @@
             <!-- Row 2 First auto generated scdehule-->
             <div class="menu-section">
                 <h2>Generate Exam Schedule</h2>
-                <a href="{{ url_for('auto_generate') }}"><h2>Generate Exam Schedule</h2></a>
+                <a href="{{ url_for('auto_generate')}}" style="text-decoration: none;"><h2>Generate Exam Schedule</h2></a>
                 <ul>
                     <li>Generate Schedule</li>
                     <li>View Current Schedule</li>
@@ -63,7 +63,7 @@
             <!-- Row 2 Second on managing lecturers-->
             <div class="menu-section">
                 <h2>Settings</h2>
-                <a href="{{ url_for('assign_lecturer') }}"><h2>Settings</h2></a>
+                <a href="{{ url_for('assign_lecturer')}}" style="text-decoration: none;"><h2>Settings</h2></a>
                 <ul>
                     <li>View All Lecturers</li>
                     <li>Disable a Lecturer</li>
