--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -30,11 +30,14 @@
             <div class="menu-section">
                 <h2>Upload File</h2><br>
                 <a href="{{ url_for('upload_file')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
-                <ul>
+                <label><h4>Upload File</h4></label><br>
+                <label><h4>View Previous File</h4></label><br>
+                <label><h4>Download File in PDF</h4></label>
+                <!--<ul>
                     <li>Upload File</li>
                     <li>View Previous File</li>
                     <li>Download File in PDF</li>
-                </ul>
+                </ul>-->
             </div>
 
             <!-- Row 1 Second Fesatures to input exam details--> 
