--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -28,56 +28,59 @@
         <div class="menu-grid">
             <!-- Row 1 First Fesatures to upload merge schedule files--> 
             <div class="menu-section">
-                <h2>Upload File</h2><br>
+                <!--   <h2>Upload File</h2><br>  -->
                 <a href="{{ url_for('upload_file')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
                 <li class="submenu">
                     <strong>What this work for?</strong>
                     <ul>
-                        <li>Upload ile for merge lecturer schedule</li>
+                        <li>Upload file for merge lecturer schedule</li>
                         <li>View current existing file</li>
                     </ul>
                 </li>
-                <!--
-                <ul>
-                    <li>Upload File</li>
-                    <li>View Previous File</li>
-                    <li>Download File in PDF</li>
-                </ul>
-                 -->
             </div>
 
             <!-- Row 1 Second Fesatures to input exam details--> 
             <div class="menu-section">
-                <h2>Input Exam Details</h2>
+                <!-- <h2>Input Exam Details</h2>  -->
                 <a href="{{ url_for('exam_input')}}" style="text-decoration: none;"><h2>Input Exam Details</h2></a>
-                <ul>
-                    <li>Add New Exam</li>
-                    <li>Edit/Delete Existing Exam</li>
-                    <li>Download All in Excel</li>
-                </ul>
+                <li class="submenu">
+                    <strong>What this work for?</strong>
+                    <ul>
+                        <li>Adding new exam session</li>
+                        <li>Edit/Delete existing exam session</li>
+                        <li>Extract out as PDF</li>
+                    </ul>
+                </li>
             </div>
 
             <!-- Row 2 First auto generated scdehule-->
             <div class="menu-section">
-                <h2>Generate Exam Schedule</h2>
+                <!-- <h2>Generate Exam Schedule</h2> -->
                 <a href="{{ url_for('auto_generate')}}" style="text-decoration: none;"><h2>Generate Exam Schedule</h2></a>
-                <ul>
-                    <li>Generate Schedule</li>
-                    <li>View Current Schedule</li>
-                    <li>Email out this Schedule</li>
-                    <li>Download Schedule</li>
-                </ul>
+                <li class="submenu">
+                    <strong>What this work for?</strong>
+                    <ul>
+                        <li>Generate Schedule</li>
+                        <li>View Current Schedule</li>
+                        <li>Email out this Schedule</li>
+                        <li>Download Schedule as PDF</li>
+                    </ul>
+                </li>
             </div>
 
             <!-- Row 2 Second on managing lecturers-->
             <div class="menu-section">
-                <h2>Settings</h2>
+                <!-- <h2>Settings</h2> -->
                 <a href="{{ url_for('assign_lecturer')}}" style="text-decoration: none;"><h2>Settings</h2></a>
-                <ul>
-                    <li>View All Lecturers</li>
-                    <li>Disable a Lecturer</li>
-                    <li>View All Dean</li>
-                </ul>
+                
+                <li class="submenu">
+                    <strong>What this work for?</strong>
+                    <ul>
+                        <li>View All Lecturers</li>
+                        <li>Disable a Lecturer</li>
+                        <li>View All Dean</li>
+                    </ul>
+                </li>
             </div>
         </div>
     </div>
