--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -52,6 +52,8 @@ form {
     width: 10vh;
     padding: 10px;
     text-align: center;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
 .menu-container {
