--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -20,8 +20,8 @@ form {
 .header-container {
     display: flex;
     justify-content: space-between;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .heading {
@@ -53,7 +53,7 @@ form {
     padding: 10px;
     text-align: center;
     border-radius: 8px;
-    background-color: #ff0000;
+    background-color: #ffb8b8;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
