--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -49,7 +49,7 @@ form {
 }
 
 .logout-btn {
-    width: 10vh;
+    width: 45%;
     padding: 10px;
     text-align: center;
     border-radius: 8px;
