--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -88,7 +88,8 @@ form {
 }
 
 .menu-section li {
-    padding: 8px 0;
+    padding: 5px 0;
+    margin: 3%;
     border-bottom: 1px solid #eee;
     color: #34495e;
 }
