--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -89,6 +89,7 @@ form {
 
 .menu-section li {
     padding: 5px 0;
+    margin-left: 2%;
     border-bottom: 1px solid #eee;
     color: #34495e;
 }
