--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -5,7 +5,7 @@ body {
     display: grid;
     place-items: center;
     background-color: #f5f5f5;
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
 }
 
 form {
@@ -40,6 +40,7 @@ form {
     background-color: white;
     border-radius: 8px;
     padding: 10px;
+    width: 30%;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
@@ -50,6 +51,7 @@ form {
     text-align: left;
     margin-right: 10px;
     margin-left: 10px;
+    width: 100%;
 }
 
 /* logout button layout */ 
