--- a/app/static/css/home_part.css
+++ b/app/static/css/home_part.css
@@ -20,8 +20,8 @@ form {
 /* Heading frame layout */
 .header-container {
     display: flex;
-    /*justify-content: space-between;
-    margin-left: 5%;
+    justify-content: space-between;
+    /*margin-left: 5%;
     margin-right: 5%; */
 }
 
