--- a/app/templates/mainPart/home_page.html
+++ b/app/templates/mainPart/home_page.html
@@ -25,7 +25,7 @@
         <br>
 
         <div class="menu-container">
-            <div class="menu-grid">
+            <div class="menu-grid" style="display: grid; grid-template-columns: repeat(2, 1fr);">
                 <!-- Row 1 First Fesatures to upload merge schedule files--> 
                 <div class="menu-section">
                     <!--   <h2>Upload File</h2><br>  -->
