--- a/app/templates/frontPart/resetPassword_page.html
+++ b/app/templates/frontPart/resetPassword_page.html
@@ -37,7 +37,7 @@
             </div>
         
             <!-- Javascript control the password toggle -->
-            <script src="{{ url_for('static', filename='js/toggle_password.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/function.js') }}"></script>
 
             <!-- Show any message of doesn't match the require of input -->
             {% if error_message and request.method == 'POST' %}
