--- a/app/templates/frontPart/register_page.html
+++ b/app/templates/frontPart/register_page.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <!-- Javascript control the password toggle -->
-                <script src="{{ url_for('static', filename='js/toggle_password.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/function.js') }}"></script>
             </div>
         </div>
 
