--- a/app/templates/frontPart/login_page.html
+++ b/app/templates/frontPart/login_page.html
@@ -52,7 +52,7 @@
             </div>
             
             <!-- Javascript control the password toggle -->
-            <script src="{{ url_for('static', filename='js/toggle_password.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/function.js') }}"></script>
             
             <!-- Button frame with standard-->
             <div class="button-frame">
