--- a/app/templates/mainPart/upload_file.html
+++ b/app/templates/mainPart/upload_file.html
@@ -28,8 +28,7 @@
             <div class="menu-grid">
                 <!-- Row 1 First Fesatures to upload merge schedule files--> 
                 <div class="menu-section">
-                    <!--   <h2>Upload File</h2><br>  -->
-                    <a href="{{ url_for('upload_file')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
+                    <h2>Upload File</h2>
                     <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
                     <li class="submenu">
                         <strong>  Purpose:</strong>
