--- a/app/templates/mainPart/assign_lecturer.html
+++ b/app/templates/mainPart/assign_lecturer.html
@@ -19,17 +19,17 @@
                 
             </div>
         </div>
-        
         <br>
-        <h1 style="text-align: center;">Welcome to Exam Invigilation Management System</h1>
         <br>
+
+        <!-- One div for table switching page -->
 
         <div class="menu-container">
             <div class="menu-grid">
                 <!-- Row 1 First Fesatures to upload merge schedule files--> 
                 <div class="menu-section">
-                    <!--   <h2>Upload File</h2><br>  -->
-                    <a href="{{ url_for('upload_file')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
+                    <h2>Assign Lecturer</h2>
+                    <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
                     <li class="submenu">
                         <strong>  Purpose:</strong>
                         <ul>
@@ -38,52 +38,12 @@
                         </ul>
                     </li>
                 </div>
-
-                <!-- Row 1 Second Fesatures to input exam details--> 
-                <div class="menu-section">
-                    <!-- <h2>Input Exam Details</h2>  -->
-                    <a href="{{ url_for('exam_input')}}" style="text-decoration: none;"><h2>Input Exam Details</h2></a>
-                    <li class="submenu">
-                        <strong>  Functionality:</strong>
-                        <ul>
-                            <li>Create new exam sessions</li>
-                            <li>Modify or remove existing exam sessions</li>
-                            <li>Export exam schedules to PDF</li>
-                            <li>Browse all current exam sessions</li>
-                        </ul>
-                    </li>
-                </div>
-
-                <!-- Row 2 First auto generated scdehule-->
-                <div class="menu-section">
-                    <!-- <h2>Generate Exam Schedule</h2> -->
-                    <a href="{{ url_for('auto_generate')}}" style="text-decoration: none;"><h2>Generate Exam Schedule</h2></a>
-                    <li class="submenu">
-                        <strong>  Functionality:</strong>
-                        <ul>
-                            <li>Automatically assign examiners based on availability</li>
-                            <li>Review and manage generated exam timetables</li>
-                            <li>Distribute schedules via email</li>
-                            <li>Download schedule in PDF format</li>
-                        </ul>
-                    </li>
-                </div>
-
-                <!-- Row 2 Second on managing lecturers-->
-                <div class="menu-section">
-                <!-- <h2>Settings</h2> -->
-                    <a href="{{ url_for('assign_lecturer')}}" style="text-decoration: none;"><h2>Settings</h2></a>
-                    <li class="submenu">
-                        <strong>  Account Controls: </strong>
-                        <ul>
-                            <li>Manage all lecturer accounts</li>
-                            <li>Deactivate lecturer access (preserves data)</li>
-                            <li>Review dean accounts</li>
-                        </ul>
-                    </li>
-                </div>
             </div>
-        </div>
+        </div>  
+
+
+
+        
     </div>
 
 </body>
