--- a/app/templates/mainPart/assign_lecture.html
+++ b/app/templates/mainPart/assign_lecture.html
@@ -9,10 +9,11 @@
                     <h2>Settings</h2>
                     <input type="file" id="lecturerList" name="lecturer_file" accept=".xlsx,.xls" required>
                     <li class="submenu">
-                        <strong>  Purpose:</strong>
+                        <strong>  Account Controls: </strong>
                         <ul>
-                            <li>Upload merged lecturer schedule files</li>
-                            <li>Access and review combined lecturer timetables</li>
+                            <li>Manage all lecturer accounts</li>
+                            <li>Deactivate lecturer access (preserves data)</li>
+                            <li>Review dean accounts</li>
                         </ul>
                     </li>
                 </div>
